--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,19 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+    path: /inicio
+    controller: App\Controller\HolaController::index
+
+animales:
+    path: /animales/{nombre}/{apellidos}
+    controller: App\Controller\HolaController::animales
+    defaults: {
+        nombre: 'Alfredo',
+        apellidos: 'Del Monte',
+        }
+    methods: [GET, POST]
+    requirements:
+        nombre: '[a-zA-Z ]+'
+        apellidos: '[a-zA-Z ]+'
+
+redirigir:
+    path: /redirigir
+    controller: App\Controller\HolaController:redirigir
