--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -16,4 +16,29 @@ animales:
 
 redirigir:
     path: /redirigir
-    controller: App\Controller\HolaController:redirigir
+    controller: App\Controller\HolaController::redirigir
+
+animal_index:
+    path: /animal/index
+    controller: App\Controller\AnimalController::index
+
+animal_save:
+    path: /animal/save
+    controller: App\Controller\AnimalController::save
+    methods: [POST]
+
+animal_update:
+    path: /animal/update/{id}
+    controller: App\Controller\AnimalController::update
+
+animal_delete:
+    path: /animal/delete/{id}
+    controller: App\Controller\AnimalController::delete
+
+crear_animal:
+    path: /crear-animal
+    controller: App\Controller\AnimalController::crearAnimal
+
+validar_email:
+    path: /validar-email/{email}
+    controller: App\Controller\AnimalController::validarEmail
